tenant usage set mbr range to 18 hours